# app-f16

./: .env.example  .gitignore  README.md  db.sqlite3  formulario-cargotrack.txt  index.html  manage.py  notes.md  package-lock.json  package.json  pyproject.toml  registro.html  requirements.txt  server.js
Calculadora Cargo Track Python/: Calculadora.Html  Style.css
accounts_app/: apps.py  forms.py  models.py  urls.py  views.py
accounts_app/migrations/: 0001_initial.py  0002_userprofile_password.py  0003_alter_userprofile_options_alter_userprofile_managers_and_more.py
accounts_app/templates/: login.html  msj_login.html  registro.html  registro_creado.html
accounts_users/: forms.py
backend/: forms.py  models.py  urls.py  views.py
backend/migrations/: 0001_initial.py
backend/static/css/: calc_style.css  calc_style_main.css  style-cal.css  style.css
backend/static/js/: calc_script.js
backend/templates/: calculadora.html  index.html  loggin.html  msj_contacto.html  registro.html  registro_creado.html
backend/utils/: requests_func.py
backend/utils/scraper-form/: scraper-f.py  scraper.js
f16_cargo/: asgi.py  settings.py  urls.py  wsgi.py
f16_cargo_project/: settings.py  urls.py  wsgi.py
f16app/: apps.py  forms.py  settings.py  urls.py  views.py  wsgi.py
f16app/migrations/: 0002_delete_userprofile.py
f16app/templates/: index.html  registro.html
scraper-form/: scraper-f.py
scss/: style.scss
static/css/: style.css  whatsapp-chat-support.css
static/js/: main.js  script.js
